# device-androidia-mixins

./: 0001-Load-sound-kernel-modules-on-demand-rather-than-stat.patch  379.patch  ChangeLog  LICENSE  README  README.md  bak_vendorsetup.sh  exempt_groups.txt  mixin-update  new_group_creation_rule.txt  test_pr.txt  valid_targets.spec  vendorsetup.sh
.github/workflows/: Runchecks.yaml
groups/: .gitignore
groups/aaf/: doc.spec  mixinfo.spec
groups/abota-fw/: doc.spec  mixinfo.spec
groups/acpi-partition/: doc.spec  mixinfo.spec
groups/acpio-partition/: doc.spec
groups/ais/: doc.spec
groups/allow-missing-dependencies/: doc.spec
groups/atrace/: doc.spec
groups/audio/: doc.spec  mixinfo.spec
groups/avb/: doc.spec
groups/avx/: doc.spec
groups/bluetooth/: doc.spec
groups/boot-arch/: doc.spec  mixinfo.spec
groups/bugreport/: doc.spec
groups/camera/: doc.spec
groups/camera-ext/: doc.spec
groups/cic-keymaster/: doc.spec
groups/codec2/: doc.spec
groups/codecs/: doc.spec
groups/config-partition/: doc.spec
groups/cpu-arch/: doc.spec
groups/cpuset/: default  doc.spec
groups/dalvik-heap/: doc.spec
groups/dbc/: doc.spec
groups/debug-coredump/: README  doc.spec
groups/debug-crashlogd/: README  doc.spec
groups/debug-dvc_desc/: doc.spec
groups/debug-kernel/: doc.spec
groups/debug-lmdump/: doc.spec
groups/debug-log-watch/: doc.spec  mixinfo.spec
groups/debug-logs/: doc.spec
groups/debug-npk/: README  doc.spec  mixinfo.spec
groups/debug-phonedoctor/: README  doc.spec
groups/debug-tools/: doc.spec
groups/debug-unresponsive/: README  doc.spec
groups/debug-usb-config/: doc.spec
groups/debugfs/: doc.spec
groups/default-drm/: doc.spec
groups/device-specific/: .gitignore  README  doc.spec  mixinfo.spec
groups/device-type/: .gitignore  README  doc.spec
groups/dexpreopt/: default  doc.spec
groups/disk-bus/: doc.spec  init.rc  ueventd_android.rc
groups/disk-encryption/: default
groups/display-density/: doc.spec
groups/docker/: doc.spec
groups/dynamic-partitions/: doc.spec
groups/ethernet/: doc.spec
groups/factory-partition/: mixinfo.spec
groups/factory-scripts/: doc.spec
groups/firmware/: doc.spec
groups/firststage-mount/: doc.spec  mixinfo.spec
groups/flashfiles/: doc.spec  mixinfo.spec
groups/fota/: doc.spec
groups/gatekeeperSW/: doc.spec
groups/gms/: doc.spec
groups/gnss/: doc.spec
groups/googleservice/: doc.spec
groups/gps/: doc.spec
groups/gptbuild/: doc.spec  mixinfo.spec
groups/graphics/: doc.spec
groups/grpc/: doc.spec  mixinfo.spec
groups/health/: default  doc.spec  mixinfo.spec
groups/houdini/: doc.spec
groups/init-boot/: doc.spec  mixinfo.spec
groups/input/: doc.spec
groups/intel_prop/: doc.spec
groups/internal-efishell/: doc.spec
groups/ipp/: default  doc.spec
groups/kernel/: AndroidBoard.mk  BoardConfig-sofia-lte-lte2.mk  BoardConfig-sofia-lte.mk  BoardConfig-sofia-lte2.mk  BoardConfig-sofia.mk  BoardConfig.mk  init.rc  mixinfo.spec  option.spec-gmin  option.spec-sofia  product-32bit.mk  (+1 more)
host/libbinder_test_ubuntu/: CMakeLists.txt  IMultiply.cpp  ISubtract.cpp  ISum.cpp  README.MD  clang.toolchain.cmake  multiplyClientUbuntu.cpp  subtractClientUbuntu.cpp  sumServiceUbuntu.cpp
host/libbinder_test_ubuntu/com/intel/sum/: ISum.aidl
host/libbinder_test_ubuntu/include/com/intel/multiply/: BnMultiply.h  BpMultiply.h  IMultiply.h
host/libbinder_test_ubuntu/include/com/intel/subtract/: BnSubtract.h  BpSubtract.h  ISubtract.h
host/libbinder_test_ubuntu/include/com/intel/sum/: BnSum.h  BpSum.h  ISum.h
host/libbinder_test_ubuntu/prebuilt/linux/libbinder/include/: safe_iop.h
host/libbinder_test_ubuntu/prebuilt/linux/libbinder/include/binder/: Binder.h  Parcel.h
host/libbinder_test_ubuntu/prebuilt/linux/libbinder/include/cutils/: atomic.h  properties.h  trace.h
host/libbinder_test_ubuntu/prebuilt/linux/libbinder/include/utils/: LightRefBase.h  RefBase.h
host/libbinder_ubuntu_test/: CMakeLists.txt  README.MD
host/libbinder_ubuntu_test/prebuilt/linux/libbinder/include/binder/: Parcel.h
host/libbinder_ubuntu_test/prebuilt/linux/libbinder/include/cutils/: atomic.h  log.h  properties.h
host/libbinder_ubuntu_test/prebuilt/linux/libbinder/include/private/binder/: binder_module.h
host/libbinder_ubuntu_test/prebuilt/linux/libbinder/include/uapi/: binder.h
host/libbinder_ubuntu_test/prebuilt/linux/libbinder/include/utils/: CallStack.h  Printer.h  ProcessCallStack.h  ThreadDefs.h
host/libbinder_ubuntu_test/tests/: ubuntuClient.cpp  ubuntuService.cpp
(+1730 files in other folders)
